fix: remove horizontal gap between cards (match vertical gap of 0)

--- a/components/records/RecordShelf.module.scss
+++ b/components/records/RecordShelf.module.scss
@@ -154,7 +154,7 @@ $bp-xl: 1280px;
 .grid {
   display: grid;
   grid-template-columns: repeat(auto-fill, 180px);
-  column-gap: 1.25rem;
+  column-gap: 0;
   row-gap: 0;
 }
 
